Bug 646032 - Missing minus\plus icons on new feature Ability to collapse attachment pane; r=bwinton, ui-r=clarkbw

--- a/mail/themes/gnomestripe/mail/messageHeader.css
+++ b/mail/themes/gnomestripe/mail/messageHeader.css
@@ -141,7 +141,7 @@ html|div#expandedHeadersTopBox {
 }
 
 #attachmentCount {
-  -moz-margin-start: 0;
+  -moz-margin-start: 2px;
 }
 
 #attachmentSize {
