--- a/mail/themes/qute/mail/messageHeader-aero.css
+++ b/mail/themes/qute/mail/messageHeader-aero.css
@@ -93,7 +93,7 @@ html|div#expandedHeadersTopBox {
 .inline-toolbar {
   -moz-appearance: none;
   padding: 0;
-  border-bottom-width: 0;
+  border-bottom-width: 0 !important;
 }
 
 /* We use pixels here because the height of the button is in pixels. */
@@ -127,11 +127,47 @@ html|div#expandedHeadersTopBox {
 }
 
 #attachmentToggle {
-  -moz-appearance: treetwisty;
+  /* Override button appearance */
+  -moz-appearance: none;
+  min-width: 0;
+  margin: 0;
+  border: 0;
+  background-color: transparent;
+
+  list-style-image: url("chrome://global/skin/tree/twisty-clsd.png");
 }
 
 #attachmentToggle[checked="true"] {
-  -moz-appearance: treetwistyopen;
+  list-style-image: url("chrome://global/skin/tree/twisty-open.png");
+}
+
+#attachmentToggle:hover {
+  list-style-image: url("chrome://global/skin/tree/twisty-clsd-hover.png");
+}
+
+#attachmentToggle[checked="true"]:hover {
+  list-style-image: url("chrome://global/skin/tree/twisty-open-hover.png");
+}
+
+#attachmentToggle:-moz-locale-dir(rtl) {
+  list-style-image: url("chrome://global/skin/tree/twisty-clsd-rtl.png");
+}
+
+#attachmentToggle[checked="true"]:-moz-locale-dir(rtl) {
+  list-style-image: url("chrome://global/skin/tree/twisty-open-rtl.png");
+}
+
+#attachmentToggle:hover:-moz-locale-dir(rtl) {
+  list-style-image: url("chrome://global/skin/tree/twisty-clsd-hover-rtl.png");
+}
+
+#attachmentToggle[checked="true"]:hover:-moz-locale-dir(rtl) {
+  list-style-image: url("chrome://global/skin/tree/twisty-open-hover-rtl.png");
+}
+
+#attachmentToggle > .button-box {
+  /* Make sure the focus ring is hidden */
+  border: none;
 }
 
 #attachmentIcon {
@@ -140,7 +176,7 @@ html|div#expandedHeadersTopBox {
 }
 
 #attachmentCount {
-  -moz-margin-start: 0;
+  -moz-margin-start: 2px;
 }
 
 #attachmentSize {
